# backend/config/routes.rb
@@ -28,7 +28,6 @@ Rails.application.routes.draw do
       get "assets/*key", to: "assets#show", format: false
 
       resources :furniture_models, only: %i[index show]
-      resources :furniture_imports, only: :create
       resources :furniture_searches, only: :create
       resources :rooms, only: %i[index create show] do
         resources :coordinations, only: :create
